--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="manifest" href="manifest.webmanifest" />
     <link rel="icon" href="icons/icon-192.png">
     <title>Agenda & Reuniões — Impettus</title>
-    <link rel="stylesheet" href="/YOUR-REPO-NAME/styles.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/YOUR-REPO-NAME/src/main.jsx"></script>
+    <!-- Vite troca este src no build; em dev carrega /src/main.jsx -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
